from docx import Document
from docx.shared import Pt
from docx.enum.text import WD_ALIGN_PARAGRAPH


TARGET = r"C:/Users/Danie/OneDrive/Desktop/turrrr/ПРАКТИЧЕСКАЯ_ЧАСТЬ_3_ПУНКТА.docx"


def add_heading(doc: Document, text: str, size: int = 14) -> None:
    p = doc.add_paragraph()
    p.alignment = WD_ALIGN_PARAGRAPH.LEFT
    r = p.add_run(text)
    r.bold = True
    r.font.name = "Times New Roman"
    r.font.size = Pt(size)


def add_text(doc: Document, text: str) -> None:
    p = doc.add_paragraph()
    p.alignment = WD_ALIGN_PARAGRAPH.JUSTIFY
    p.paragraph_format.first_line_indent = Pt(35)
    r = p.add_run(text)
    r.font.name = "Times New Roman"
    r.font.size = Pt(14)


def add_listing(doc: Document, title: str, sql: str) -> None:
    t = doc.add_paragraph()
    tr = t.add_run(title)
    tr.bold = True
    tr.font.name = "Times New Roman"
    tr.font.size = Pt(12)
    for line in sql.strip().splitlines():
        p = doc.add_paragraph()
        r = p.add_run(line)
        r.font.name = "Consolas"
        r.font.size = Pt(10)


doc = Document()

add_heading(doc, "1. Постановка задачи")
add_text(doc, "Разрабатываемое веб-приложение предназначено для автоматизации туристических процессов: публикации туров, оформления бронирований, коммуникации пользователей и административного управления. Ключевой задачей является создание единой цифровой платформы с ролевой моделью доступа (гость, пользователь, администратор), в которой каждый участник получает набор релевантных функций.")
add_text(doc, "Практическая значимость проекта заключается в том, что система охватывает полный цикл пользовательского взаимодействия: от первичного просмотра контента до подтверждения брони и получения уведомлений. Дополнительно реализуются социальные и коммуникационные возможности, а также инструменты модерации и поддержки.")

add_heading(doc, "2. Проектирование базы данных")
add_text(doc, "Проектирование базы данных выполнялось как отдельный этап практической реализации, поскольку именно БД определяет целостность бизнес-процессов и устойчивость всей системы. В качестве целевой платформы хранения использовалась PostgreSQL в составе Supabase, что позволило объединить реляционную модель данных, механизмы авторизации и управляемые политики доступа. При проектировании учитывались требования к масштабируемости, скорости типовых выборок и удобству сопровождения схемы при дальнейшем развитии приложения.")
add_text(doc, "Основной принцип проектирования заключался в поэтапной декомпозиции предметной области на связанные сущности: пользователи, туры, бронирования, участники поездки, обращения в поддержку, сообщения и уведомления. Для каждой таблицы определялись первичные ключи, внешние ключи и минимально необходимый набор атрибутов, отражающих состояние бизнес-объекта. Такой подход позволил обеспечить предсказуемость операций создания, изменения и удаления данных, а также исключить логические противоречия между модулями.")
add_text(doc, "Дополнительно учитывались прикладные сценарии, непосредственно влияющие на структуру: параллельная работа пользовательского и административного контуров, необходимость хранить историю событий, поддержка модерации и обработка коммуникаций в реальном времени. Ниже по каждой ключевой таблице сначала приводится пояснение ее роли в архитектуре, а сразу после него приводится соответствующий SQL-листинг.")
add_text(doc, "С практической точки зрения выбранная модель данных реализует принцип «одна бизнес-сущность — одна ответственная таблица». Это упрощает тестирование, сопровождение и масштабирование: например, бронирование хранится отдельно от участников поездки, а контекст сессии поддержки хранится отдельно от сообщений в этой сессии. Такой подход минимизирует дублирование, уменьшает риск несогласованности данных и позволяет независимо развивать отдельные модули без критического влияния на остальную схему.")
add_text(doc, "Отдельное внимание было уделено операционным сценариям: отказам, повторным запросам, частичным ошибкам и конкурентным обновлениям. При проектировании закладывалось, что пользовательские и административные действия могут происходить одновременно. Поэтому связи между таблицами выстроены так, чтобы при удалении или изменении записей сохранялась корректная история и не нарушалась логика зависимых объектов. Это особенно важно для бронирований, сообщений поддержки и системных уведомлений.")

add_heading(doc, "Таблица tours", 13)
add_text(doc, "Таблица tours является ядром туристического каталога. В ней хранится информация, необходимая одновременно для витрины (карточки и фильтрация), для бизнес-логики бронирования (проверка лимита мест и статуса) и для административного управления (создание, редактирование, архивирование). Наличие полей max_participants и current_participants позволяет контролировать вместимость тура в момент оформления заявки и предотвращать переполнение.")
add_text(doc, "В пользовательском контуре данные таблицы tours участвуют в отображении каталога, сортировке, фильтрации и формировании страницы конкретного тура. В серверной логике перед созданием бронирования выполняется чтение текущих параметров тура: проверяется, активен ли он, не завершен ли набор, корректна ли стоимость. Таким образом, таблица работает не только как справочник, но и как источник ограничений для транзакционных операций.")
add_text(doc, "В административном контуре таблица tours используется для полного жизненного цикла тура: создание новой записи, изменение параметров, публикация, дублирование и завершение. Поле status позволяет внедрять контролируемые этапы состояния (например, черновик, активный, завершенный), а slug обеспечивает человеко-читаемую маршрутизацию в URL и стабильные ссылки на карточки тура.")
add_listing(doc, "Листинг 1 — SQL таблицы tours", """
CREATE TABLE IF NOT EXISTS tours (
  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
  title TEXT NOT NULL,
  slug TEXT UNIQUE NOT NULL,
  description TEXT,
  city_id UUID,
  price_per_person NUMERIC(12,2) NOT NULL DEFAULT 0,
  max_participants INTEGER NOT NULL DEFAULT 0,
  current_participants INTEGER NOT NULL DEFAULT 0,
  status TEXT NOT NULL DEFAULT 'draft',
  created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);
""")

add_heading(doc, "Таблица bookings", 13)
add_text(doc, "Таблица bookings фиксирует ключевой бизнес-факт системы — оформление бронирования тура конкретным пользователем. В ней отражаются жизненный цикл заявки (status), состояние оплаты (payment_status) и финансовый итог операции (total_price). Данные этой таблицы используются в личном кабинете, в отчетных представлениях и в административных процедурах контроля заказов.")
add_text(doc, "С точки зрения прикладной логики bookings является транзакционной таблицей: каждая запись появляется как результат конкретного пользовательского действия. После создания бронирования запись используется во множестве процессов: отображение текущих и завершенных поездок, отмена брони, расчет статистики активности пользователя, построение административной аналитики по продажам и загрузке туров.")
add_text(doc, "Поля status и payment_status разделены специально, чтобы отделить бизнес-состояние самой заявки от платежного результата. Это позволяет корректно обрабатывать промежуточные сценарии (например, бронь создана, но оплата еще не подтверждена) и исключает смешение разных этапов процесса в одном атрибуте. В результате система остается гибкой при расширении платежной логики.")
add_listing(doc, "Листинг 2 — SQL таблицы bookings", """
CREATE TABLE IF NOT EXISTS bookings (
  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
  user_id UUID NOT NULL REFERENCES profiles(id) ON DELETE CASCADE,
  tour_id UUID NOT NULL REFERENCES tours(id) ON DELETE CASCADE,
  status TEXT NOT NULL DEFAULT 'pending',
  payment_status TEXT NOT NULL DEFAULT 'unpaid',
  total_price NUMERIC(12,2) NOT NULL DEFAULT 0,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);
""")

add_heading(doc, "Таблица booking_attendees", 13)
add_text(doc, "Таблица booking_attendees реализует детализацию состава поездки и служит расширением к таблице bookings по схеме один-ко-многим. Она нужна в реальных сценариях, когда один пользователь оплачивает бронирование сразу на нескольких участников. Выделение участников в отдельную таблицу упрощает структуру основной брони и делает модель более гибкой для дальнейшего расширения (например, добавления документов, контактов, специальных требований).")
add_text(doc, "На практике таблица booking_attendees позволяет избежать хранения массивов и вложенных структур в одной строке брони, что повышает читаемость данных и упрощает SQL-операции. Каждая запись соответствует одному участнику и содержит самостоятельный набор полей. Такой формат удобен для валидации, выборок, экспорта и последующего формирования списков участников для организационных процессов.")
add_text(doc, "Связь с bookings по внешнему ключу обеспечивает целостность: участник не может существовать без связанной брони. При удалении бронирования связанные участники удаляются каскадно, что предотвращает появление «осиротевших» записей и поддерживает чистоту данных в рабочей базе.")
add_listing(doc, "Листинг 3 — SQL таблицы booking_attendees", """
CREATE TABLE IF NOT EXISTS booking_attendees (
  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
  booking_id UUID NOT NULL REFERENCES bookings(id) ON DELETE CASCADE,
  full_name TEXT NOT NULL,
  birth_date DATE,
  passport_number TEXT
);
""")

add_heading(doc, "Таблица profiles", 13)
add_text(doc, "Таблица profiles выступает опорной сущностью пользовательского контура: хранит идентификационные и профильные атрибуты, роль доступа, а также признаки ограничений со стороны модерации. На практике эта таблица используется почти во всех модулях, поскольку от нее зависят проверки прав, маршрутизация административных действий и персонализация интерфейса.")
add_text(doc, "В отличие от минимальных auth-данных, profiles хранит расширенный контекст пользователя, необходимый прикладному уровню: публичные идентификаторы, атрибуты профиля и служебные маркеры. Благодаря этому фронтенд и API получают единую точку доступа к пользовательским данным без необходимости дублирования в разных таблицах.")
add_text(doc, "Поле role является ключевым для ролевой модели и используется при проверке разрешений на маршрутах админ-панели и защищенных API. Поля модерации (is_banned, ban_until) позволяют централизованно управлять ограничениями и сразу отражать их в интерфейсе, что делает контроль доступа прозрачным и предсказуемым.")
add_listing(doc, "Листинг 4 — SQL таблицы profiles", """
CREATE TABLE IF NOT EXISTS profiles (
  id UUID PRIMARY KEY,
  email TEXT UNIQUE,
  username TEXT UNIQUE,
  role TEXT NOT NULL DEFAULT 'user',
  is_banned BOOLEAN NOT NULL DEFAULT false,
  ban_until TIMESTAMPTZ,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);
""")

add_heading(doc, "Таблица support_sessions", 13)
add_text(doc, "Таблица support_sessions формирует контекст обращения в службу поддержки и описывает саму сессию диалога. В ней фиксируются инициатор обращения (авторизованный пользователь или гость), текущий статус обработки и временные метки жизненного цикла сессии. Такая модель позволяет разделить состояние обращения и конкретные сообщения, что повышает управляемость и прозрачность коммуникаций.")
add_text(doc, "Использование отдельной сущности сессии позволяет агрегировать сообщения в логически завершенные диалоги, а не хранить чат как «плоский» поток. Это важно для операторов поддержки: можно быстро увидеть активные и закрытые обращения, отслеживать нагрузку и возвращаться к истории по конкретной проблеме пользователя.")
add_text(doc, "Поля guest_name и guest_email дают возможность поддерживать канал общения даже для неавторизованных обращений, а поле status обеспечивает управляемый workflow обработки. Такая структура хорошо масштабируется, поскольку отделяет метаданные обращения от содержимого сообщений.")
add_listing(doc, "Листинг 5 — SQL таблицы support_sessions", """
CREATE TABLE IF NOT EXISTS support_sessions (
  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
  user_id UUID REFERENCES profiles(id) ON DELETE SET NULL,
  guest_name TEXT,
  guest_email TEXT,
  status TEXT NOT NULL DEFAULT 'open',
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  closed_at TIMESTAMPTZ
);
""")

add_heading(doc, "Таблица chat_messages", 13)
add_text(doc, "Таблица chat_messages хранит историю сообщений внутри сессий поддержки и обеспечивает трассируемость диалога между пользователем и оператором. Поля sender_id и sender_type позволяют корректно различать сторону коммуникации, а read_at используется для обработки непрочитанных сообщений и построения индикаторов в интерфейсе.")
add_text(doc, "На уровне бизнес-логики chat_messages обслуживает сразу несколько сценариев: отправка новых сообщений, загрузка истории диалога, отображение статуса прочтения, а также возможная модерация или разбор спорных обращений. Наличие точных временных меток делает возможным восстановление последовательности событий при анализе инцидентов.")
add_text(doc, "Связь с support_sessions определяет принадлежность сообщения конкретному обращению. Это упрощает запросы выборки (например, получить все сообщения текущей сессии) и снижает вероятность логических ошибок при параллельной работе нескольких операторов или одновременной активности большого числа пользователей.")
add_listing(doc, "Листинг 6 — SQL таблицы chat_messages", """
CREATE TABLE IF NOT EXISTS chat_messages (
  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
  session_id UUID NOT NULL REFERENCES support_sessions(id) ON DELETE CASCADE,
  sender_id UUID REFERENCES profiles(id) ON DELETE SET NULL,
  sender_type TEXT NOT NULL,
  message TEXT NOT NULL,
  read_at TIMESTAMPTZ,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);
""")

add_heading(doc, "Таблица notifications", 13)
add_text(doc, "Таблица notifications предназначена для централизованного хранения пользовательских уведомлений, возникающих в результате бизнес-событий и системных действий. Эта сущность позволяет обеспечить единый канал информирования о бронированиях, изменениях статусов и социальных активностях. Признак is_read используется для визуального разделения новых и просмотренных событий.")
add_text(doc, "В прикладном смысле notifications является слоем обратной связи системы: после значимых операций пользователю создается структурированное уведомление, которое отображается в интерфейсе и может участвовать в логике счетчиков непрочитанных событий. Это повышает прозрачность работы платформы и уменьшает риск пропуска важных изменений.")
add_text(doc, "Выделение уведомлений в отдельную таблицу позволяет не смешивать служебные сообщения с бизнес-данными других модулей. Такой подход упрощает очистку, архивацию и развитие уведомлений в будущем (например, добавление каналов доставки, приоритета или привязки к типам событий).")
add_listing(doc, "Листинг 7 — SQL таблицы notifications", """
CREATE TABLE IF NOT EXISTS notifications (
  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
  user_id UUID NOT NULL REFERENCES profiles(id) ON DELETE CASCADE,
  message TEXT NOT NULL,
  type TEXT,
  is_read BOOLEAN NOT NULL DEFAULT false,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);
""")

add_heading(doc, "3. Проектирование пользовательского интерфейса")
add_text(doc, "Пользовательский интерфейс спроектирован по ролевой модели: публичные экраны для гостя, персональные разделы для авторизованного пользователя и административные панели для сотрудников с повышенными правами. Это позволяет сократить визуальную перегрузку и повысить понятность навигации.")
add_text(doc, "Отдельно проработаны состояния интерфейса: загрузка, успешное выполнение операции, ошибки валидации и пустые данные. Такой подход снижает количество пользовательских ошибок и повышает качество взаимодействия с системой.")

doc.save(TARGET)
print(TARGET)
